- Relaxed the API restriction that forbade you to create multiple metrics with the same name but different label names. While this is a Prometheus anti-pattern, it is a standard pattern in other metrics technologies and we will allow it in the name of interoperability.
* 6.0.0
- Dropped library support for unsupported .NET runtime versions (.NET 2.1).
- If Razor Pages is enabled, the "page" label is now automatically added to the default HTTP server metrics, unless there is a user-defined label already present with this name.
- The "endpoint" label is now automatically added to the default HTTP server metrics, containing this endpoint routing route pattern of the request, unless there is a user-defined label already present with this name.
- Added integration with .NET EventCounters, which can now be easily exposed as Promtheus metrics (see EventCounterAdapter class).
- Added integration with .NET Meters, which can now be easily exposed as Promtheus metrics (see MeterAdapter class).
- Added ReplaceOnPush option to MetricPusher #305 #322.
- Minimum .NET Framework version is now 4.6.2.
* 5.1.0
- Add support for adding custom label value providers to HTTP server metrics. #347
* 5.0.2
- Bugfix: HttpClientMetrics under concurrent load with long-running requests were leading to broken response streams. #336
* 5.0.1
- Bugfix: PowersOfTenDividedBuckets did not work with >= 10 buckets due to overlap. Now skips overlapping region of generated series.
* 5.0.0
- Added HTTP client metric that measures the response duration (time until response content reading is finished).
- Added "client" label containing the name of HTTP client to HTTP client metrics.
- Added "code" label with HTTP response code to HTTP client metrics. #299