@@ -290,11 +290,12 @@ NB! Best practices of metric design is to **minimize the number of different lab
 You can add static labels that always have fixed values. This is possible on two levels:
 
 * on the metrics registry (e.g. `Metrics.DefaultRegistry`)
+* on a metric factory (e.g. `Metrics.WithLabels()`)
 * on one specific metric
 
-Both modes can be combined and instance-specific metric labels are also applied, as usual.
+All levels of labeling can be combined and instance-specific metric labels can also be applied on top, as usual.
 
-Example with static labels on two levels and one instance-specific label:
+Example with static labels on three levels and one instance-specific label:
 
 ```csharp
 Metrics.DefaultRegistry.SetStaticLabels(new Dictionary<string, string>
@@ -303,16 +304,23 @@ Metrics.DefaultRegistry.SetStaticLabels(new Dictionary<string, string>
   { "environment", "testing" }
 });
 
-var requestsHandled = Metrics.CreateCounter("myapp_requests_handled_total", "Count of requests handled, labelled by response code.",
-  new CounterConfiguration
-  {
-    // Labels applied to all instances of myapp_requests_handled_total.
-    StaticLabels = new Dictionary<string, string>
+var backgroundServicesMetricFactory = Metrics.WithLabels(new Dictionary<string, string>
+{
+  // Labels applied to all metrics created via this factory.
+  { "category", "background-services" }
+});
+
+var requestsHandled = backgroundServicesMetricFactory
+  .CreateCounter("myapp_requests_handled_total", "Count of requests handled, labelled by response code.",
+    new CounterConfiguration
     {
-      { "is_pci_compliant_environment", AppSettings.IsPciCompliant.ToString() }
-    },
-    LabelNames = new[] { "response_code" }
-  });
+        // Labels applied to all instances of myapp_requests_handled_total.
+        StaticLabels = new Dictionary<string, string>
+        {
+        { "is_pci_compliant_environment", AppSettings.IsPciCompliant.ToString() }
+        },
+        LabelNames = new[] { "response_code" }
+    });
 
 // Labels applied to individual instances of the metric.
 requestsHandled.WithLabels("404").Inc();
